# dark_photon_search

./: README.md  pyproject.toml  requirements-app.txt  streamlit_app.py
configs/: baseline_calibrated.json  baseline_uncalibrated.json  geometry_scan.json  published_limit_anchors.json  quick_scan.json
docs/: Streamlit_User_Manual.md  Streamlit_User_Manual_HighSchool_Bilingual_TR_EN.md
outputs/: calibration_summary.json  geometry_optimization.csv  proposal_simulation_report.md  quick_scan.csv  scan_results.csv  student_visual_electron_candidates.csv  student_visual_magnet_muon_tracks.csv  student_visual_magnet_signal_events.csv  student_visual_magnet_stats.json  student_visual_muon_tracks.csv  student_visual_signal_events.csv  student_visual_stats.json  student_visual_vertex_pairs.csv
scripts/: build_streamlit_manual_pdf.py  calibrate_model.py  generate_report.py  generate_visualizations.py  optimize_geometry.py  plot_scan.py  run_full_pipeline.py  run_scan.py  run_single_point.py
src/dark_photon_sim/: __init__.py  analysis.py  calibration.py  config.py  engine.py  geometry.py  io_utils.py  physics.py
tests/: test_extensions.py  test_smoke.py
