[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dark-photon-search-sim"
version = "0.1.0"
description = "Config-driven dark photon beam-dump toy simulation framework"
requires-python = ">=3.10"

[project.optional-dependencies]
app = [
  "streamlit>=1.30",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "plotly>=5.15",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
